--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "react-native-modal": "^11.1.0"
   },
   "devDependencies": {
-    "react": "16.6.1",
-    "react-native": "~0.57.7",
-    "react-native-vector-icons": "^4.2.0",
-    "react-native-modal": "^11.1.0"
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-vector-icons": "9.2.0",
+    "react-native-modal": "13.0.1"
   }
 }
